--- a/introduction.ipynb
+++ b/introduction.ipynb
@@ -46,7 +46,7 @@
         "\n",
         "Post each sheet as a separate item on the Teams channel for Lab No.1\n",
         "\n",
-        "As an example, below is the sheet for the project \"A map of every building in America\" ![\"WHO Coronavirus (COVID-19) Dashboard\"](./img/who_covid.png)\n",
+        "As an example, below is the sheet for the project \"WHO Coronavirus (COVID-19) Dashboard\" ![\"WHO Coronavirus (COVID-19) Dashboard\"](./img/who_covid.png)\n",
         "\n",
         "-   **Substantive**\n",
         "\n",
@@ -56,7 +56,7 @@
         "\n",
         "    -   `Big idea`: Shows confirmed COVID-19 cases and deaths by country to date\n",
         "\n",
-        "    -   `Message`: The project displays a map of the US where only building footprints are shown. This element is used to show a) how much buildings tell about places and the build environment, and b) some interesting specific examples that illustrate large trends in society (e.g. urban sprawl)\n",
+        "    -   `Message`: The project displays a map of the world where COVID-19 cases are shown by country. This element is used to show which countries have had more cases (large trends). A drop down button allows us to visualise the map by a) Total per 100,000 population b) % change in the last 7 days c) newly reported in the last 7 days d) newly reported in the last 24 hours.\n",
         "\n",
         "-   **Technical**\n",
         "\n",
@@ -66,11 +66,16 @@
         "\n",
         "    -   `Zoomable`: Yes\n",
         "\n",
-        "    -   `Tooltips`: No\n",
+        "    -   `Tooltips`: Yes\n",
         "\n",
-        "    -   `Basemap`: Yes, Mapbox/OpenStreetMap\n",
+        "    -   `Basemap`: No\n",
         "\n",
-        "    -   `Technology`: MapboxGL\n",
+        "    -   `Technology`: Unknown\n",
+        "\n",
+        "Here are a couple of other COVID-19 examples of web-maps that where basemaps and technology is easier to spot.\n",
+        "\n",
+        "-   [\"London School of Hygiene & Tropical Medicine - COVID-19 tracker\"](https://vac-lshtm.shinyapps.io/ncov_tracker/?_ga=2.246644480.501918083.1674819300-1251881958.1674819300)\n",
+        "-   [\"Tracking Coronavirus in the United Kingdom: Latest Map and Case Count\"](https://www.nytimes.com/interactive/2021/world/united-kingdom-covid-cases.html)\n",
         "\n",
         "### Class discussion\n",
         "\n",
@@ -90,7 +95,7 @@
         "-   A comprehensive overview of computational notebooks and how they relate to modern scientific work is available on [Ch.1 of the GDS book](https://geographicdata.science/book/notebooks/01_geo_thinking.html).\n",
         "-   A recent overview of notebooks in Geography is available in [Boeing & Arribas-Bel (2021)](https://gistbok.ucgis.org/bok-topics/gis-and-computational-notebooks)"
       ],
-      "id": "d8735209"
+      "id": "1df9d665"
     }
   ],
   "metadata": {
