--- a/introduction.ipynb
+++ b/introduction.ipynb
@@ -95,14 +95,14 @@
         "-   A comprehensive overview of computational notebooks and how they relate to modern scientific work is available on [Ch.1 of the GDS book](https://geographicdata.science/book/notebooks/01_geo_thinking.html).\n",
         "-   A recent overview of notebooks in Geography is available in [Boeing & Arribas-Bel (2021)](https://gistbok.ucgis.org/bok-topics/gis-and-computational-notebooks)"
       ],
-      "id": "9f846960"
+      "id": "8e32e5f9"
     }
   ],
   "metadata": {
     "kernelspec": {
       "display_name": "Python 3 (ipykernel)",
-      "language": "python",
-      "name": "python3"
+      "language": "python3",
+      "name": "python"
     },
     "jupytext": {
       "text_representation": {
