intro slide basic edits

--- a/introduction.ipynb
+++ b/introduction.ipynb
@@ -14,7 +14,7 @@
         "\n",
         "## Lecture\n",
         "\n",
-        "Slides can be downloaded [here](https://github.com/GDSL-UL/wma/raw/main/pdf/lecture_01.pdf)\n",
+        "Slides can be found [here](https://github.com/GDSL-UL/wma/raw/main/html/introduction_slides.html)\n",
         "\n",
         "## Lab: Powerful examples\n",
         "\n",
@@ -95,14 +95,14 @@
         "-   A comprehensive overview of computational notebooks and how they relate to modern scientific work is available on [Ch.1 of the GDS book](https://geographicdata.science/book/notebooks/01_geo_thinking.html).\n",
         "-   A recent overview of notebooks in Geography is available in [Boeing & Arribas-Bel (2021)](https://gistbok.ucgis.org/bok-topics/gis-and-computational-notebooks)"
       ],
-      "id": "8e32e5f9"
+      "id": "822c8b75"
     }
   ],
   "metadata": {
     "kernelspec": {
       "display_name": "Python 3 (ipykernel)",
-      "language": "python3",
-      "name": "python"
+      "language": "python",
+      "name": "python3"
     },
     "jupytext": {
       "text_representation": {
