--- a/html/introduction_slides.qmd
+++ b/html/introduction_slides.qmd
@@ -2,6 +2,7 @@
 title: "Web Mapping & Analysis - Introduction"
 author: "Elisabetta Pietrostefani & Dani Arribas-Bel"
 format: revealjs
+align-items: center;
 ---
 
 ## Today
@@ -12,13 +13,14 @@ format: revealjs
 
 ## Anatomy of the Web Map
 
-##  title
+##  
+<center><img data-src="./figs/gmaps.png" alt="centered image" width="80%" height="80%"><center>
 
-<img data-src="../img/gmaps.png">
+##
+<center><img data-src="./figs/osm.png" alt="centered image" width="80%" height="80%"><center>
 
-##  {data-background="../slides/figs/osm.png" data-background-size="contain"}
-
-##  {data-background="../slides/figs/cdrc_maps.png" data-background-size="contain"}
+##  
+<center><img data-src="./figs/cdrc_maps.png" alt="centered image" width="80%" height="80%"><center>
 
 ## Building blocks of a web map
 
@@ -41,23 +43,19 @@ format: revealjs
 
 ## Hardware
 
-|                                   |                                |
-|-----------------------------------|--------------------------------|
-| ![](../img/gmaps/paper_map.svg) | ![](../slides/figs/server.jpg) |
+<CENTER>
+
+<center><img data-src="./figs/paper_map.svg" width="20%" height="20%"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img data-src="./figs/server.jpg" width="20%" height="20%"><center>
 
 ## Software
 
-|                                                                                              |                                |                              |
-|----------------------------------------|----------------|----------------|
-| !\[\](../slides/figs/pen.jpg)\[\`url\`\](https://www.flickr.com/photos/orangeacid/204163563) | !\[\](../slides/figs/qgis.png) | ![](../slides/figs/code.png) |
+<center><img data-src="./figs/pen.jpg" height="180"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img data-src="./figs/qgis.png" height="300">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img data-src="./figs/code.png" height="300"><center>
+
+`url`
 
 ## Design
 
-|                                    |                                                                                                                                                                                        |
-|----------------|--------------------------------------------------------|
-| ![](../slides/figs/bad_mashup.png) | ![](../slides/figs/election_map.png)\[\`url\`\](https://www.theguardian.com/us-news/ng-interactive/2016/nov/08/us-election-2016-results-live-clinton-trump?view=map&type=presidential) |
-
-# 
+<center><img data-src="./figs/bad_mashup.png" height="500">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img data-src="./figs/election_map.png" height="500"><center>
 
 ## Overview
 
@@ -82,25 +80,23 @@ format: revealjs
 -   Due on [W-6]{.hlg} and [W-11]{.hlg}
 -   Description in lectures + lab clinics
 
-# 
-
 ## Logistics
 
 ## Website
 
-<CENTER><img src="../slides/figs/course_website.png" height="400"/></CENTER>
+<CENTER><img src="./figs/website.png" height="500"/></CENTER>
 
 <CENTER><SMALL> [`https://gdsl-ul.github.io/wma/`](https://gdsl-ul.github.io/wma/) </SMALL></CENTER>
 
 ## Lecture/Labs
 
-**Lectures**: *Fridays* 1pm-2pm \@`Teams`
+**Lectures**: *Mondays* 9-10am \@`Teams`
 
 <LEFT> - Live streams + video archive </LEFT>
 
 <LEFT> - Underlying concepts + Context </LEFT>
 
-**Labs**: *Fridays* 3pm-5pm \@`Teams`
+**Labs**: *Mondays* 10am-12noon \@`Teams`
 
 <LEFT> - Hands on </LEFT>
 
@@ -108,9 +104,8 @@ format: revealjs
 
 ## Teams
 
-<CENTER>![](../slides/figs/teams.png)</CENTER>
+<CENTER>![](./figs/teams.png)</CENTER>
 
-# 
 
 ## Homework
 
