--- a/html/introduction_slides.qmd
+++ b/html/introduction_slides.qmd
@@ -13,7 +13,7 @@ align-items: center;
 -   Overview
 -   Logistics
 
-## Anatomy of the Web Map
+# Anatomy of the Web Map
 
 ##  
 <center><img data-src="./figs/gmaps.png" alt="centered image" width="80%" height="80%"><center>
@@ -58,6 +58,24 @@ align-items: center;
 <center><img data-src="./figs/bad_mashup.png" height="500">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img data-src="./figs/election_map.png" height="500"><center>
 
 # Overview
+    
+## Philosophy
+    
+1. This course is like a gym subsciption
+2. Principles over technology
+3. Collaborate, do not copy 
+    
+## Delivery: lectures + labs
+
+### Lectures
+
+- Underlying concepts
+- Sometimes standard, sometimes flipped (we'll announce!)
+    
+### Labs
+    
+- Hands on!
+- Collaborate *and* participate
 
 ## Content
 
@@ -88,30 +106,20 @@ align-items: center;
 
 <CENTER> [`https://gdsl-ul.github.io/wma/`](https://gdsl-ul.github.io/wma/) </CENTER>
 
-## Lecture/Labs
-
-**Lectures**: *Mondays* 9-10am \@`Teams`
-
-<LEFT> - Live streams + video archive </LEFT>
-
-<LEFT> - Underlying concepts + Context </LEFT>
-
-**Labs**: *Mondays* 10am-12noon \@`Teams`
-
-<LEFT> - Hands on </LEFT>
-
-<LEFT> - Interactive </LEFT>
-
 ## Teams
 
 <CENTER>![](./figs/teams.png)</CENTER>
+    
+## Sessions
+    
+- Lectures *and* labs in one 3h session (with breaks!)
+- **Mondays 9am-12pm** (lecture 1h, lab 2h approx)
+- Always linked to activity on Teams (i.e., stay tuned on Teams!)
 
 ## Homework
 
-::: fragment
 -   Bring at least one example of [web mapping]{.hlg} that you find [compelling]{.hlg}
 -   Contribute the link to Teams
-:::
 
 # 
 
