--- a/webarch.qmd
+++ b/webarch.qmd
@@ -123,7 +123,7 @@ library(plyr)
 library(tidycensus)
 library(tidyverse)
 
-census_api_key("12efa59339e5a00a910f77f2e691309ae70e1d1b") #replace this with your key
+#census_api_key("ADD IT HERE") #replace this with your key
 ```
 
 -   Variables in tidycensus are identified by their Census ID, e.g.
